[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["hkh0605 <effortcoders@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
